# CSC469

./: README.md  report.tex
A1/: Makefile.am  README.md  configure.ac  format_data  format_data_A1  present1  present2  run_experiment_A1  run_experiment_A2  setup
A1/doc/: A1.tex  A1P1.eps  A1P1.json  A1P2.eps  A1P2PS1.json  A1P2PS2.json  P1.tex  P2.tex
A1/src/: Makefile.am  clockrate.cpp  clockrate.hpp  inactive.cpp  inactive.hpp  part1.cpp  part2.cpp  perftest.cpp  perftest.hpp  tsc.cpp  tsc.hpp
A2/: Makefile  README.md  build
A2/allocators/: Makefile
A2/allocators/.svn/: all-wcprops
A2/allocators/cmu_malloc/: malloc.c
A2/allocators/submit/: malloc.c
A2/benchmarks/: runall.pl
A2/benchmarks/.svn/: all-wcprops  entries
A2/benchmarks/cache-scratch/: Makefile  cache-scratch.c  cache-scratch.ps  graphtests.pl
A2/benchmarks/cache-thrash/: Makefile  cache-thrash.ps  graphtests.pl
A2/benchmarks/larson/: Makefile  graphtests.pl  larson.c  larson.ps  runtests.pl
A2/benchmarks/threadtest/: Makefile  graphtests.pl  runtests.pl  threadtest.c  threadtest.ps
A2/doc/: A2.bib  A2.tex  report.tex
A2/include/: mm_thread.h
A2/include/.svn/: entries
A2/tests/: Makefile
A2/tests/unittests/: Makefile  unittests.c
A2/util/.svn/: entries
A3/: Makefile  README  client.h  client_main.c  client_recv.c  client_util.c  defs.h  server.h  server_util.c
a2/.svn/: all-wcprops  entries
a2/allocators/.svn/: entries
a2/benchmarks/cache-scratch/: runtests.pl
a2/benchmarks/threadtest/: Makefile
a2/include/: malloc.h  memlib.h
a2/util/: Makefile
(+169 files in other folders)
