#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([perftest], [1.0], [d.bloemendal@utoronto.ca])
AC_LANG([C++])
AC_CONFIG_SRCDIR([src/perftest.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([build])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AX_CXX_COMPILE_STDCXX_11

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
